--- a/proto2.tex
+++ b/proto2.tex
@@ -312,7 +312,10 @@ Moreover, the required instances make the language compatible with the unificati
 Aditionally helper functions for converting expressions between the two domains and translation to \markWord{UTerm}.
 
 To solve the issue of infinitely deep language expressions, we find the fixed point of the expression.
-The unification function provided by \cite{prolog-lib} is not very \progLang{Prolog} like\eref{language-like} in
+The unification function provided by \cite{prolog-lib} is not very \progLang{Prolog} like\endnote{%
+  ``\textit{\progLang{Prolog} like}'' should be hyphenated as \text{\progLang{Prolog}-like}
+  when used as an adjective, as here.
+}\elabel{language-like} in
 nature and certain adjustments need to be made.
 \begin{enumerate}
 \item Extracting variable and creating dictionaries.
