--- a/pwp.tex
+++ b/pwp.tex
@@ -22,8 +22,9 @@ This chapter discusses the properties of the target language \progLang{Prolog} a
 language to extend its capabilities.
 
 \begin{enumerate}
-\item Why a logic programming language\eref{caps-choices} ?
-Our base language; \progLang{Haskell} is from the same paradigm. 
+\item Why a logic programming language?
+Our base language\yyy{;}{,} \progLang{Haskell}\yyy{}{,} is from the same
+paradigm.  
 
 It would be interesting to see how two languages of the same family with conflicting features can be made to work together.
 
@@ -31,10 +32,13 @@ It would be interesting to see how two languages of the same family with conflic
 
 \item \progLang{Prolog} as a logic programming language.
 
-\progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and computational linguistics.  
-It is a declarative\eref{caps-choices} language i.e. a program is a set of facts an rules running a query on which will return a result. The relation
-between them is defined by clauses using \textit{Horn Clauses}\cite{wikiprolog}. \progLang{Prolog} is very popular and has a number of 
-implementations \cite{website:comparisonofprologimplementationswiki} for different purposes. 
+  \progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and
+  computational linguistics.
+  It is a declarative language\yyy{}{\Large,} i.e.\yyy{}{\Large,} a program is a set of facts an rules running a
+  query on which will return a result.
+  The relation between them is defined by clauses using \textit{Horn Clauses}\cite{wikiprolog}.
+  \progLang{Prolog} is very popular and has a number of implementations
+  \cite{website:comparisonofprologimplementationswiki} for different purposes.
 
 \item Why embed \progLang{Prolog} ?
 
@@ -139,15 +143,12 @@ Variables in Prolog are rather different to those in most other languages. Furth
 \item Simple Semantics
 
 Under a declarative reading, the order of rules, and of goals within rules, is irrelevant since logical disjunction and conjunction are 
-commutative. Procedurally, however, it is often important to take into account \progLang{Prolog}'s\endnote{%
-  Use \macroName{progLang}!
-}
- execution strategy, either for efficiency reasons, 
-or due to the semantics of impure built-in predicates for which the order of evaluation matters. Also, as \progLang{Prolog}\endnote{%
-  Use \macroName{progLang}!
-}
- interpreters try to unify 
-clauses in the order they're provided, failing to give a correct ordering can lead to infinite recursion.
+commutative.
+Procedurally, however, it is often important to take into account \progLang{Prolog}'s execution strategy, either
+for efficiency reasons, or due to the semantics of impure built-in predicates for which the order of evaluation
+matters.
+Also, as \progLang{Prolog} interpreters try to unify clauses in the order they're provided, failing to give a
+correct ordering can lead to infinite recursion.
 
 
 In this subsection the operational semantics of CHR in Prolog are presented informally. They do not differ essentially from other CHR systems.
