--- a/hwh.tex
+++ b/hwh.tex
@@ -67,7 +67,11 @@ The declarative style consists of defining components of programs i.e.
 computations not a control flow \cite{website:declarativeprogrammingwiki}.
 
 This is where \progLang{Haskell} shines by providing something called a \textit{monad}.
-Functional Programming Languages\eref{caps-choices} define computations which then need to be ordered in some way to form a
+Functional Programming Languages\endnote{%
+  \david{What style guide are you using to determine capitalization?}\newline
+  \mehul{none at the moment but I will change certain capitals to small}
+}\elabel{caps-choices}
+define computations which then need to be ordered in some way to form a
 combination\cite{website:monadascomputation}.
 A monad gives a bubble within the language to allow modification of control flow without affecting the rest of the
 universe.
