Added cross-references to DSLs.

--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -17,9 +17,9 @@
 \section{What the prototypes contain}
 \subsection{What Prototype 1 contains}
 
-  Most languages have a recursive abstract syntax which restricts the eDSL\endnote{%
-    Have we defined ``eDSL'' yet?  If not, write
-    ``\textsl{embedded, domain-specific language \enparen{eDSL}}''.
+Most languages have a recursive abstract syntax which restricts the \yyy{eDSL}{embedded, domain-specific language
+  \enparen{eDSL, see p.~\pageref{sec:DSL-def}}}\endnote{%  
+  We have only defined ``DSL'' before.
 }
   in terms of its capability to \textit{open up} the language, i.e, to include meta syntactic
   variables, custom quantifiers and logic.
