--- a/hwh.tex
+++ b/hwh.tex
@@ -19,7 +19,14 @@
 In this chapter we discuss the properties of \progLang{Haskell}
 
 This chapter discusses the properties of the host language \progLang{Haskell} and mainly the feature set it
-provides for embedding domain specific languages(EDSLs).
+provides for \yyy{embedding domain specific languages(EDSLs)}{embedded
+  domain specific languages (eDSLs)}.\endnote{%
+  Be consistent with previous notation, and put a space before the open ``\textbf{(}''.
+}
+
+\david{%
+  This chapter needs to be rewritten without the list.
+}
 
 \begin{enumerate}
 
