--- a/introduction.tex
+++ b/introduction.tex
@@ -115,7 +115,7 @@ Here the choice is \progLang{Haskell}; as both the languages are declarative the
 can help to blend the two.
 
 A domain-specific language (DSL) is a concise micro language that offers tools and functionalities focused on a
-particular problem domain.
+particular problem domain.\label{sec:DSL-def}
 In many cases, DSL programs are translated to calls to a common subroutine library and the DSL can be viewed as a
 means to hide the details of that library \cite{van2000domain}.
 
